setting up instruments API

--- a/exploration/api_test.ipynb
+++ b/exploration/api_test.ipynb
@@ -57,25 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = f\"{OANDA_URL}/instruments/EUR_USD/candles\""
+    "url = f\"{OANDA_URL}/accounts/{ACCOUNT_ID}/instruments\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = session.get(url, params=params, data=None, headers=None)"
+    "response = session.get(url, params=None, data=None, headers=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "200"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,63 +95,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instruments_list = data['instruments']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'instrument': 'EUR_USD',\n",
-       " 'granularity': 'H1',\n",
-       " 'candles': [{'complete': True,\n",
-       "   'volume': 2643,\n",
-       "   'time': '2024-10-23T20:00:00.000000000Z',\n",
-       "   'mid': {'o': '1.07860', 'h': '1.07866', 'l': '1.07820', 'c': '1.07822'}},\n",
-       "  {'complete': True,\n",
-       "   'volume': 271,\n",
-       "   'time': '2024-10-23T21:00:00.000000000Z',\n",
-       "   'mid': {'o': '1.07834', 'h': '1.07846', 'l': '1.07826', 'c': '1.07830'}},\n",
-       "  {'complete': True,\n",
-       "   'volume': 752,\n",
-       "   'time': '2024-10-23T22:00:00.000000000Z',\n",
-       "   'mid': {'o': '1.07830', 'h': '1.07834', 'l': '1.07800', 'c': '1.07822'}},\n",
-       "  {'complete': True,\n",
-       "   'volume': 1310,\n",
-       "   'time': '2024-10-23T23:00:00.000000000Z',\n",
-       "   'mid': {'o': '1.07823', 'h': '1.07848', 'l': '1.07794', 'c': '1.07804'}},\n",
-       "  {'complete': True,\n",
-       "   'volume': 4758,\n",
-       "   'time': '2024-10-24T00:00:00.000000000Z',\n",
-       "   'mid': {'o': '1.07804', 'h': '1.07900', 'l': '1.07798', 'c': '1.07888'}},\n",
-       "  {'complete': True,\n",
-       "   'volume': 5615,\n",
-       "   'time': '2024-10-24T01:00:00.000000000Z',\n",
-       "   'mid': {'o': '1.07889', 'h': '1.07894', 'l': '1.07820', 'c': '1.07832'}},\n",
-       "  {'complete': True,\n",
-       "   'volume': 4255,\n",
-       "   'time': '2024-10-24T02:00:00.000000000Z',\n",
-       "   'mid': {'o': '1.07831', 'h': '1.07890', 'l': '1.07812', 'c': '1.07876'}},\n",
-       "  {'complete': True,\n",
-       "   'volume': 3265,\n",
-       "   'time': '2024-10-24T03:00:00.000000000Z',\n",
-       "   'mid': {'o': '1.07876', 'h': '1.07891', 'l': '1.07851', 'c': '1.07871'}},\n",
-       "  {'complete': True,\n",
-       "   'volume': 2406,\n",
-       "   'time': '2024-10-24T04:00:00.000000000Z',\n",
-       "   'mid': {'o': '1.07870', 'h': '1.07936', 'l': '1.07869', 'c': '1.07932'}},\n",
-       "  {'complete': False,\n",
-       "   'volume': 183,\n",
-       "   'time': '2024-10-24T05:00:00.000000000Z',\n",
-       "   'mid': {'o': '1.07933', 'h': '1.07933', 'l': '1.07920', 'c': '1.07926'}}]}"
+       "127"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response.json()"
+    "len(instruments_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['name', 'type', 'displayName', 'pipLocation', 'displayPrecision', 'tradeUnitsPrecision', 'minimumTradeSize', 'maximumTrailingStopDistance', 'minimumTrailingStopDistance', 'maximumPositionSize', 'maximumOrderUnits', 'marginRate', 'guaranteedStopLossOrderMode', 'tags', 'financing'])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "instruments_list[0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key_i = ['name', 'type', 'displayName', 'pipLocation', 'displayPrecision', 'tradeUnitsPrecision','marginRate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instruments_dict = {}\n",
+    "for i in instruments_list:\n",
+    "    key = (i['name'])\n",
+    "    instruments_dict[key] = {k : i[k] for k in key_i}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'USD_CAD',\n",
+       " 'type': 'CURRENCY',\n",
+       " 'displayName': 'USD/CAD',\n",
+       " 'pipLocation': -4,\n",
+       " 'displayPrecision': 5,\n",
+       " 'tradeUnitsPrecision': 0,\n",
+       " 'marginRate': '0.05'}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "instruments_dict['USD_CAD']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../data/insturments.json\", \"w\") as f:\n",
+    "    f.write(json.dumps(instruments_dict, indent=2))"
    ]
   }
  ],
