--- a/exploration/api_test.ipynb
+++ b/exploration/api_test.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,8 +278,7 @@
     "        print(\"No candles\", pair_name)\n",
     "    candles_df = get_candles_df(data)\n",
     "    candles_df.to_pickle(f\"../data/{pair_name}_{granularity}.pkl\")\n",
-    "    print(f\"{pair_name} {granularity} {candles_df.shape[0]} candles, {candles_df.time.min()} {candles_df.time.max()}\")\n",
-    "    "
+    "    print(f\"{pair_name} {granularity} {candles_df.shape[0]} candles, {candles_df.time.min()} {candles_df.time.max()}\")\n"
    ]
   },
   {
@@ -294,280 +293,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>volume</th>\n",
-       "      <th>mid_o</th>\n",
-       "      <th>mid_h</th>\n",
-       "      <th>mid_l</th>\n",
-       "      <th>mid_c</th>\n",
-       "      <th>bid_o</th>\n",
-       "      <th>bid_h</th>\n",
-       "      <th>bid_l</th>\n",
-       "      <th>bid_c</th>\n",
-       "      <th>ask_o</th>\n",
-       "      <th>ask_h</th>\n",
-       "      <th>ask_l</th>\n",
-       "      <th>ask_c</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024-10-23 17:00:00+00:00</td>\n",
-       "      <td>17009</td>\n",
-       "      <td>1.07732</td>\n",
-       "      <td>1.07866</td>\n",
-       "      <td>1.07673</td>\n",
-       "      <td>1.07822</td>\n",
-       "      <td>1.07723</td>\n",
-       "      <td>1.07859</td>\n",
-       "      <td>1.07665</td>\n",
-       "      <td>1.07815</td>\n",
-       "      <td>1.07740</td>\n",
-       "      <td>1.07874</td>\n",
-       "      <td>1.07680</td>\n",
-       "      <td>1.07829</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2024-10-23 21:00:00+00:00</td>\n",
-       "      <td>7091</td>\n",
-       "      <td>1.07834</td>\n",
-       "      <td>1.07900</td>\n",
-       "      <td>1.07794</td>\n",
-       "      <td>1.07888</td>\n",
-       "      <td>1.07817</td>\n",
-       "      <td>1.07892</td>\n",
-       "      <td>1.07786</td>\n",
-       "      <td>1.07881</td>\n",
-       "      <td>1.07852</td>\n",
-       "      <td>1.07908</td>\n",
-       "      <td>1.07802</td>\n",
-       "      <td>1.07895</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2024-10-24 01:00:00+00:00</td>\n",
-       "      <td>15541</td>\n",
-       "      <td>1.07889</td>\n",
-       "      <td>1.07936</td>\n",
-       "      <td>1.07812</td>\n",
-       "      <td>1.07932</td>\n",
-       "      <td>1.07881</td>\n",
-       "      <td>1.07929</td>\n",
-       "      <td>1.07805</td>\n",
-       "      <td>1.07924</td>\n",
-       "      <td>1.07897</td>\n",
-       "      <td>1.07944</td>\n",
-       "      <td>1.07820</td>\n",
-       "      <td>1.07939</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024-10-24 05:00:00+00:00</td>\n",
-       "      <td>33187</td>\n",
-       "      <td>1.07933</td>\n",
-       "      <td>1.08082</td>\n",
-       "      <td>1.07704</td>\n",
-       "      <td>1.08032</td>\n",
-       "      <td>1.07925</td>\n",
-       "      <td>1.08075</td>\n",
-       "      <td>1.07697</td>\n",
-       "      <td>1.08025</td>\n",
-       "      <td>1.07941</td>\n",
-       "      <td>1.08091</td>\n",
-       "      <td>1.07711</td>\n",
-       "      <td>1.08040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024-10-24 09:00:00+00:00</td>\n",
-       "      <td>29422</td>\n",
-       "      <td>1.08032</td>\n",
-       "      <td>1.08054</td>\n",
-       "      <td>1.07887</td>\n",
-       "      <td>1.07964</td>\n",
-       "      <td>1.08023</td>\n",
-       "      <td>1.08046</td>\n",
-       "      <td>1.07878</td>\n",
-       "      <td>1.07956</td>\n",
-       "      <td>1.08040</td>\n",
-       "      <td>1.08061</td>\n",
-       "      <td>1.07895</td>\n",
-       "      <td>1.07973</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2024-10-24 13:00:00+00:00</td>\n",
-       "      <td>33369</td>\n",
-       "      <td>1.07966</td>\n",
-       "      <td>1.08114</td>\n",
-       "      <td>1.07950</td>\n",
-       "      <td>1.08108</td>\n",
-       "      <td>1.07958</td>\n",
-       "      <td>1.08106</td>\n",
-       "      <td>1.07942</td>\n",
-       "      <td>1.08101</td>\n",
-       "      <td>1.07974</td>\n",
-       "      <td>1.08122</td>\n",
-       "      <td>1.07959</td>\n",
-       "      <td>1.08116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2024-10-24 17:00:00+00:00</td>\n",
-       "      <td>14603</td>\n",
-       "      <td>1.08108</td>\n",
-       "      <td>1.08299</td>\n",
-       "      <td>1.08108</td>\n",
-       "      <td>1.08279</td>\n",
-       "      <td>1.08100</td>\n",
-       "      <td>1.08292</td>\n",
-       "      <td>1.08100</td>\n",
-       "      <td>1.08271</td>\n",
-       "      <td>1.08116</td>\n",
-       "      <td>1.08306</td>\n",
-       "      <td>1.08116</td>\n",
-       "      <td>1.08287</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2024-10-24 21:00:00+00:00</td>\n",
-       "      <td>6387</td>\n",
-       "      <td>1.08266</td>\n",
-       "      <td>1.08289</td>\n",
-       "      <td>1.08201</td>\n",
-       "      <td>1.08217</td>\n",
-       "      <td>1.08256</td>\n",
-       "      <td>1.08281</td>\n",
-       "      <td>1.08194</td>\n",
-       "      <td>1.08210</td>\n",
-       "      <td>1.08277</td>\n",
-       "      <td>1.08302</td>\n",
-       "      <td>1.08208</td>\n",
-       "      <td>1.08224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2024-10-25 01:00:00+00:00</td>\n",
-       "      <td>10650</td>\n",
-       "      <td>1.08218</td>\n",
-       "      <td>1.08276</td>\n",
-       "      <td>1.08200</td>\n",
-       "      <td>1.08219</td>\n",
-       "      <td>1.08210</td>\n",
-       "      <td>1.08268</td>\n",
-       "      <td>1.08192</td>\n",
-       "      <td>1.08212</td>\n",
-       "      <td>1.08226</td>\n",
-       "      <td>1.08284</td>\n",
-       "      <td>1.08208</td>\n",
-       "      <td>1.08226</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       time  volume    mid_o    mid_h    mid_l    mid_c  \\\n",
-       "0 2024-10-23 17:00:00+00:00   17009  1.07732  1.07866  1.07673  1.07822   \n",
-       "1 2024-10-23 21:00:00+00:00    7091  1.07834  1.07900  1.07794  1.07888   \n",
-       "2 2024-10-24 01:00:00+00:00   15541  1.07889  1.07936  1.07812  1.07932   \n",
-       "3 2024-10-24 05:00:00+00:00   33187  1.07933  1.08082  1.07704  1.08032   \n",
-       "4 2024-10-24 09:00:00+00:00   29422  1.08032  1.08054  1.07887  1.07964   \n",
-       "5 2024-10-24 13:00:00+00:00   33369  1.07966  1.08114  1.07950  1.08108   \n",
-       "6 2024-10-24 17:00:00+00:00   14603  1.08108  1.08299  1.08108  1.08279   \n",
-       "7 2024-10-24 21:00:00+00:00    6387  1.08266  1.08289  1.08201  1.08217   \n",
-       "8 2024-10-25 01:00:00+00:00   10650  1.08218  1.08276  1.08200  1.08219   \n",
-       "\n",
-       "     bid_o    bid_h    bid_l    bid_c    ask_o    ask_h    ask_l    ask_c  \n",
-       "0  1.07723  1.07859  1.07665  1.07815  1.07740  1.07874  1.07680  1.07829  \n",
-       "1  1.07817  1.07892  1.07786  1.07881  1.07852  1.07908  1.07802  1.07895  \n",
-       "2  1.07881  1.07929  1.07805  1.07924  1.07897  1.07944  1.07820  1.07939  \n",
-       "3  1.07925  1.08075  1.07697  1.08025  1.07941  1.08091  1.07711  1.08040  \n",
-       "4  1.08023  1.08046  1.07878  1.07956  1.08040  1.08061  1.07895  1.07973  \n",
-       "5  1.07958  1.08106  1.07942  1.08101  1.07974  1.08122  1.07959  1.08116  \n",
-       "6  1.08100  1.08292  1.08100  1.08271  1.08116  1.08306  1.08116  1.08287  \n",
-       "7  1.08256  1.08281  1.08194  1.08210  1.08277  1.08302  1.08208  1.08224  \n",
-       "8  1.08210  1.08268  1.08192  1.08212  1.08226  1.08284  1.08208  1.08226  "
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "candles_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 9 entries, 0 to 8\n",
-      "Data columns (total 14 columns):\n",
-      " #   Column  Non-Null Count  Dtype                  \n",
-      "---  ------  --------------  -----                  \n",
-      " 0   time    9 non-null      datetime64[ns, tzutc()]\n",
-      " 1   volume  9 non-null      int64                  \n",
-      " 2   mid_o   9 non-null      float64                \n",
-      " 3   mid_h   9 non-null      float64                \n",
-      " 4   mid_l   9 non-null      float64                \n",
-      " 5   mid_c   9 non-null      float64                \n",
-      " 6   bid_o   9 non-null      float64                \n",
-      " 7   bid_h   9 non-null      float64                \n",
-      " 8   bid_l   9 non-null      float64                \n",
-      " 9   bid_c   9 non-null      float64                \n",
-      " 10  ask_o   9 non-null      float64                \n",
-      " 11  ask_h   9 non-null      float64                \n",
-      " 12  ask_l   9 non-null      float64                \n",
-      " 13  ask_c   9 non-null      float64                \n",
-      "dtypes: datetime64[ns, tzutc()](1), float64(12), int64(1)\n",
-      "memory usage: 1.1 KB\n"
+      "EUR_USD H4 9 candles, 2024-10-23 17:00:00+00:00 2024-10-25 01:00:00+00:00\n"
      ]
     }
    ],
    "source": [
-    "candles_df.info()"
+    "create_data_file(\"EUR_USD\", count=10, granularity=\"H4\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EUR_USD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "EUR_USD H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "EUR_GBP H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "EUR_GBP H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "EUR_JPY H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "EUR_JPY H4 4000 candles, 2022-04-01 05:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "EUR_CHF H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "EUR_CHF H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "EUR_NZD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "EUR_NZD H4 4000 candles, 2022-04-03 21:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "EUR_CAD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "EUR_CAD H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "EUR_AUD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "EUR_AUD H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "USD_JPY H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "USD_JPY H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "USD_CHF H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "USD_CHF H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "USD_CAD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "USD_CAD H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "GBP_USD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "GBP_USD H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "GBP_JPY H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "GBP_JPY H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "GBP_CHF H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "GBP_CHF H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "GBP_NZD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "GBP_NZD H4 4000 candles, 2022-04-03 21:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "GBP_CAD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "GBP_CAD H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "GBP_AUD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "GBP_AUD H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "CHF_JPY H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "CHF_JPY H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "NZD_USD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "NZD_USD H4 4000 candles, 2022-04-04 01:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "NZD_JPY H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "NZD_JPY H4 4000 candles, 2022-04-03 21:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "NZD_CHF H1 4000 candles, 2024-03-06 11:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "NZD_CHF H4 4000 candles, 2022-04-01 17:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "NZD_CAD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "NZD_CAD H4 4000 candles, 2022-04-03 21:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "CAD_JPY H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "CAD_JPY H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "CAD_CHF H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "CAD_CHF H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "AUD_USD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "AUD_USD H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "AUD_JPY H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "AUD_JPY H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "AUD_CHF H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "AUD_CHF H4 4000 candles, 2022-04-01 09:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "AUD_NZD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "AUD_NZD H4 4000 candles, 2022-04-01 17:00:00+00:00 2024-10-25 01:00:00+00:00\n",
+      "AUD_CAD H1 4000 candles, 2024-03-06 12:00:00+00:00 2024-10-25 04:00:00+00:00\n",
+      "AUD_CAD H4 4000 candles, 2022-04-01 13:00:00+00:00 2024-10-25 01:00:00+00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "our_curr = ['EUR', 'USD', 'GBP', 'JPY', 'CHF', 'NZD', 'CAD', 'AUD']\n",
+    "\n",
+    "for p1 in our_curr:\n",
+    "    for p2 in our_curr:\n",
+    "        pr = f\"{p1}_{p2}\"\n",
+    "        if pr in instruments_dict:\n",
+    "            for g in [\"H1\", \"H4\"]:\n",
+    "                create_data_file(pr, count=4001, granularity=g)"
+   ]
   },
   {
    "cell_type": "code",
