--- a/exploration/plotting_candles.ipynb
+++ b/exploration/plotting_candles.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "3999  s24-10-25 01:00  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1585,6 +1585,7 @@
         "width": 900,
         "xaxis": {
          "gridcolor": "#1f292f",
+         "nticks": 5,
          "rangeslider": {
           "visible": false
          }
@@ -1621,6 +1622,7 @@
     "fig.update_xaxes(\n",
     "    gridcolor=\"#1f292f\",\n",
     "    rangeslider=dict(visible=False),\n",
+    "    nticks=5\n",
     ")\n",
     "\n",
     "fig.update_layout(\n",
