--- a/exploration/testing.ipynb
+++ b/exploration/testing.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "from plotting import CandlePlot"
    ]
   },
   {
@@ -28,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['sTime'] = [dt.datetime.strftime(x, \"s%y-%m-%d %H:%M\") for x in df.time]"
+    "df_plot = df.iloc[:100]"
    ]
   },
   {
@@ -38,158 +39,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>volume</th>\n",
-       "      <th>mid_o</th>\n",
-       "      <th>mid_h</th>\n",
-       "      <th>mid_l</th>\n",
-       "      <th>mid_c</th>\n",
-       "      <th>bid_o</th>\n",
-       "      <th>bid_h</th>\n",
-       "      <th>bid_l</th>\n",
-       "      <th>bid_c</th>\n",
-       "      <th>ask_o</th>\n",
-       "      <th>ask_h</th>\n",
-       "      <th>ask_l</th>\n",
-       "      <th>ask_c</th>\n",
-       "      <th>sTime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3995</th>\n",
-       "      <td>2024-10-24 09:00:00+00:00</td>\n",
-       "      <td>29422</td>\n",
-       "      <td>1.08032</td>\n",
-       "      <td>1.08054</td>\n",
-       "      <td>1.07887</td>\n",
-       "      <td>1.07964</td>\n",
-       "      <td>1.08023</td>\n",
-       "      <td>1.08046</td>\n",
-       "      <td>1.07878</td>\n",
-       "      <td>1.07956</td>\n",
-       "      <td>1.08040</td>\n",
-       "      <td>1.08061</td>\n",
-       "      <td>1.07895</td>\n",
-       "      <td>1.07973</td>\n",
-       "      <td>s24-10-24 09:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3996</th>\n",
-       "      <td>2024-10-24 13:00:00+00:00</td>\n",
-       "      <td>33369</td>\n",
-       "      <td>1.07966</td>\n",
-       "      <td>1.08114</td>\n",
-       "      <td>1.07950</td>\n",
-       "      <td>1.08108</td>\n",
-       "      <td>1.07958</td>\n",
-       "      <td>1.08106</td>\n",
-       "      <td>1.07942</td>\n",
-       "      <td>1.08101</td>\n",
-       "      <td>1.07974</td>\n",
-       "      <td>1.08122</td>\n",
-       "      <td>1.07959</td>\n",
-       "      <td>1.08116</td>\n",
-       "      <td>s24-10-24 13:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3997</th>\n",
-       "      <td>2024-10-24 17:00:00+00:00</td>\n",
-       "      <td>14603</td>\n",
-       "      <td>1.08108</td>\n",
-       "      <td>1.08299</td>\n",
-       "      <td>1.08108</td>\n",
-       "      <td>1.08279</td>\n",
-       "      <td>1.08100</td>\n",
-       "      <td>1.08292</td>\n",
-       "      <td>1.08100</td>\n",
-       "      <td>1.08271</td>\n",
-       "      <td>1.08116</td>\n",
-       "      <td>1.08306</td>\n",
-       "      <td>1.08116</td>\n",
-       "      <td>1.08287</td>\n",
-       "      <td>s24-10-24 17:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3998</th>\n",
-       "      <td>2024-10-24 21:00:00+00:00</td>\n",
-       "      <td>6387</td>\n",
-       "      <td>1.08266</td>\n",
-       "      <td>1.08289</td>\n",
-       "      <td>1.08201</td>\n",
-       "      <td>1.08217</td>\n",
-       "      <td>1.08256</td>\n",
-       "      <td>1.08281</td>\n",
-       "      <td>1.08194</td>\n",
-       "      <td>1.08210</td>\n",
-       "      <td>1.08277</td>\n",
-       "      <td>1.08302</td>\n",
-       "      <td>1.08208</td>\n",
-       "      <td>1.08224</td>\n",
-       "      <td>s24-10-24 21:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3999</th>\n",
-       "      <td>2024-10-25 01:00:00+00:00</td>\n",
-       "      <td>10650</td>\n",
-       "      <td>1.08218</td>\n",
-       "      <td>1.08276</td>\n",
-       "      <td>1.08200</td>\n",
-       "      <td>1.08219</td>\n",
-       "      <td>1.08210</td>\n",
-       "      <td>1.08268</td>\n",
-       "      <td>1.08192</td>\n",
-       "      <td>1.08212</td>\n",
-       "      <td>1.08226</td>\n",
-       "      <td>1.08284</td>\n",
-       "      <td>1.08208</td>\n",
-       "      <td>1.08226</td>\n",
-       "      <td>s24-10-25 01:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                          time  volume    mid_o    mid_h    mid_l    mid_c  \\\n",
-       "3995 2024-10-24 09:00:00+00:00   29422  1.08032  1.08054  1.07887  1.07964   \n",
-       "3996 2024-10-24 13:00:00+00:00   33369  1.07966  1.08114  1.07950  1.08108   \n",
-       "3997 2024-10-24 17:00:00+00:00   14603  1.08108  1.08299  1.08108  1.08279   \n",
-       "3998 2024-10-24 21:00:00+00:00    6387  1.08266  1.08289  1.08201  1.08217   \n",
-       "3999 2024-10-25 01:00:00+00:00   10650  1.08218  1.08276  1.08200  1.08219   \n",
-       "\n",
-       "        bid_o    bid_h    bid_l    bid_c    ask_o    ask_h    ask_l    ask_c  \\\n",
-       "3995  1.08023  1.08046  1.07878  1.07956  1.08040  1.08061  1.07895  1.07973   \n",
-       "3996  1.07958  1.08106  1.07942  1.08101  1.07974  1.08122  1.07959  1.08116   \n",
-       "3997  1.08100  1.08292  1.08100  1.08271  1.08116  1.08306  1.08116  1.08287   \n",
-       "3998  1.08256  1.08281  1.08194  1.08210  1.08277  1.08302  1.08208  1.08224   \n",
-       "3999  1.08210  1.08268  1.08192  1.08212  1.08226  1.08284  1.08208  1.08226   \n",
-       "\n",
-       "                sTime  \n",
-       "3995  s24-10-24 09:00  \n",
-       "3996  s24-10-24 13:00  \n",
-       "3997  s24-10-24 17:00  \n",
-       "3998  s24-10-24 21:00  \n",
-       "3999  s24-10-25 01:00  "
+       "(100, 14)"
       ]
      },
      "execution_count": 4,
@@ -198,21 +49,21 @@
     }
    ],
    "source": [
-    "df.tail()"
+    "df_plot.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_plot = df.iloc[:100]"
+    "cp = CandlePlot(df_plot)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1601,40 +1452,7 @@
     }
    ],
    "source": [
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Candlestick(\n",
-    "    x=df_plot['sTime'],\n",
-    "    open=df_plot.mid_o,\n",
-    "    high=df_plot.mid_h,\n",
-    "    low=df_plot.mid_l,\n",
-    "    close=df_plot.mid_c,\n",
-    "    line=dict(width=1), opacity=1,\n",
-    "    increasing_fillcolor=\"#24A06B\",\n",
-    "    decreasing_fillcolor=\"#CC2E3C\",\n",
-    "    increasing_line_color=\"#2EC886\",\n",
-    "    decreasing_line_color=\"#FF3A4C\"\n",
-    "))\n",
-    "\n",
-    "fig.update_yaxes(\n",
-    "    gridcolor=\"#1f292f\"\n",
-    ")\n",
-    "\n",
-    "fig.update_xaxes(\n",
-    "    gridcolor=\"#1f292f\",\n",
-    "    rangeslider=dict(visible=False),\n",
-    "    nticks=5\n",
-    ")\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    width=900,\n",
-    "    height=400,\n",
-    "    margin=dict(l=10, r=10, b=10, t=10),\n",
-    "    paper_bgcolor=\"#2c303c\",\n",
-    "    plot_bgcolor=\"#2c303c\",\n",
-    "    font=dict(size=8, color=\"#e1e1e1\")\n",
-    ")\n",
-    "\n",
-    "fig.show()"
+    "cp.show_plot()"
    ]
   },
   {
