ma cross analysis

--- a/exploration/MA_Cross_An.ipynb
+++ b/exploration/MA_Cross_An.ipynb
@@ -2,12 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from plotting import CandlePlot"
+    "from plotting import CandlePlot\n",
+    "pd.set_option(\"display.max_columns\", None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ma_res = pd.read_pickle(\"../data/ma_res.pkl\")\n",
+    "df_ma_trades = pd.read_pickle(\"../data/ma_trades.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['H1', 'H4'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ma_res['granularity'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ma_res_h1 = df_ma_res[df_ma_res['granularity'] == \"H1\"].copy()\n",
+    "df_ma_trades_h1 = df_ma_trades[df_ma_trades['granularity'] == \"H1\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['pair', 'num_trades', 'total_gain', 'mean_gain', 'min_gain', 'max_gain',\n",
+       "       'ma_l', 'ma_s', 'cross', 'granularity'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ma_res_h1.columns"
    ]
   },
   {
@@ -16,9 +79,197 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ma_res = pd.read_pickle(\"../data/ma_res.pkl\")\n",
-    "df_ma_trades = pd.read_pickle(\"../data/ma_trades.pkl\")"
+    "df_cross_summary = df_ma_res_h1[['pair', 'num_trades', 'total_gain','cross']].copy()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pair</th>\n",
+       "      <th>num_trades</th>\n",
+       "      <th>total_gain</th>\n",
+       "      <th>cross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>EUR_USD</td>\n",
+       "      <td>205</td>\n",
+       "      <td>290</td>\n",
+       "      <td>MA_10_MA_20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>EUR_USD</td>\n",
+       "      <td>105</td>\n",
+       "      <td>243</td>\n",
+       "      <td>MA_10_MA_40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EUR_USD</td>\n",
+       "      <td>105</td>\n",
+       "      <td>-126</td>\n",
+       "      <td>MA_20_MA_40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>EUR_USD</td>\n",
+       "      <td>110</td>\n",
+       "      <td>-372</td>\n",
+       "      <td>MA_30_MA_40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      pair  num_trades  total_gain        cross\n",
+       "0  EUR_USD         205         290  MA_10_MA_20\n",
+       "1  EUR_USD         105         243  MA_10_MA_40\n",
+       "2  EUR_USD         105        -126  MA_20_MA_40\n",
+       "3  EUR_USD         110        -372  MA_30_MA_40"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cross_summary.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cross</th>\n",
+       "      <th>pair</th>\n",
+       "      <th>num_trades</th>\n",
+       "      <th>total_gain</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MA_10_MA_150</td>\n",
+       "      <td>EUR_USDEUR_GBPGBP_USD</td>\n",
+       "      <td>137</td>\n",
+       "      <td>1033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MA_10_MA_120</td>\n",
+       "      <td>EUR_USDEUR_GBPGBP_USD</td>\n",
+       "      <td>151</td>\n",
+       "      <td>766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>MA_30_MA_150</td>\n",
+       "      <td>EUR_USDEUR_GBPGBP_USD</td>\n",
+       "      <td>89</td>\n",
+       "      <td>377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MA_10_MA_40</td>\n",
+       "      <td>EUR_USDEUR_GBPGBP_USD</td>\n",
+       "      <td>353</td>\n",
+       "      <td>256</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           cross                   pair  num_trades  total_gain\n",
+       "1   MA_10_MA_150  EUR_USDEUR_GBPGBP_USD         137        1033\n",
+       "0   MA_10_MA_120  EUR_USDEUR_GBPGBP_USD         151         766\n",
+       "10  MA_30_MA_150  EUR_USDEUR_GBPGBP_USD          89         377\n",
+       "3    MA_10_MA_40  EUR_USDEUR_GBPGBP_USD         353         256"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cross_gr = df_cross_summary.groupby(by=['cross'], as_index=False).sum()\n",
+    "df_cross_gr.sort_values(by='total_gain', ascending=False, inplace=True)\n",
+    "df_cross_gr.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ma_res_h1[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
