--- a/indicators.ipynb
+++ b/indicators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "sys.path.append('../.')\n",
     "from exploration.plotting import CandlePlot\n",
     "import pandas as pd\n",
-    "from technicals.indicators import BollingerBands, ATR"
+    "from technicals.indicators import BollingerBands, ATR, KeltnerChannels"
    ]
   },
   {
